# sp_alternative_cpp

./: config.json  config5000.json  config_example.json  config_nuc.json  config_nuc_df.json  config_nuc_pam.json  main.cpp  sp_alternative_cpp.slnx
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters
UnitTest1/test_data/: bali_phy_msa.1.fas  (+4 more)
dSeq/: dSeq.cpp  dSeq.vcxproj  dSeq.vcxproj.filters
features_for_msas/: features_for_msas.cpp  features_for_msas.vcxproj  features_for_msas.vcxproj.filters
sp_alternative_UnitTests/: sp_alternative_UnitTests.cpp  sp_alternative_UnitTests.vcxproj  sp_alternative_UnitTests.vcxproj.filters
sp_alternative_cpp/: CMakeLists.txt  config.h  enums.cpp  sp_alternative_cpp.cpp  sp_alternative_cpp.vcxproj  sp_alternative_cpp.vcxproj.filters
sp_alternative_cpp/include/: config.h  dist_labels_stats.h  distance_calc.h  entropy_stats.h  enums.h  evo_model.h  gap_interval.h  gaps_stats.h  global_alignment.h  kmer_stats.h  msa.h  msa_align_by_pattern.h  msa_basic_stats.h  msa_stats.h  multi_msa_service.h  neighbor_joining.h  node.h  rooted_tree.h  sop_stats.h  sp_score.h  subs_matrix_counter.h  tree_stats.h  unrooted_tree.h  utils.h  w_sop_stats.h
sp_alternative_cpp/src/: config.h  dist_labels_stats.cpp  distance_calc.cpp  entropy_stats.cpp  enums.cpp  gaps_stats.cpp  global_alignment.cpp  kmer_stats.cpp  msa.cpp  msa_align_by_pattern.cpp  multi_msa_service.cpp  neighbor_joining.cpp  node.cpp  rooted_tree.cpp  sop_stats.cpp  sp_score.cpp  tree_stats.cpp  unit_test_tree.cpp  unrooted_tree.cpp  utils.cpp  w_sop_stats.cpp
